--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,30 @@ html {
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
+
+
+/* CSS styling by id */
+#userItemTitle {
+  font-size: 40px;
+  text-align: center;
+}
+
+#userItemImage {
+  width: 500px;
+  height: 325px;
+  border: 1px solid black;
+}
+
+#userOtherItems {
+  width: 425px;
+  height: 105px;
+  border: 1px solid black;
+}
+
+/* CSS styling by class */
+.medium-top-buffer {
+  padding-top: 50px;
+}
+.small-top-buffer {
+  padding-top: 20px;
+}
