--- a/views/pages/view-item.ejs
+++ b/views/pages/view-item.ejs
@@ -1,67 +1,14 @@
 <!DOCTYPE html>
 <html lang = "en">
    <head>
-      <meta charset = "utf-8">
-      <meta http-equiv = "X-UA-Compatible" content = "IE = edge">
-      <meta name = "viewport" content = "width = device-width, initial-scale = 1">
-      <!-- Import Jquery API -->
-      <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-      <!-- Latest compiled and minified CSS -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-      <!-- Optional theme -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-      <!-- Latest compiled and minified JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-      <!-- CSS styling for page -->
-      <link rel="stylesheet" href="../assets/css/view-item-style.css">
-      <!-- Javascript script for page -->
-      <script src="../assets/scripts/view-item-script.js"> </script>
-      <!-- Import Google Maps API  -->
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEhVniNNOqfh0w3vHJouB8XmUu_z8Y298&callback=initMap" async defer></script>
-      <title>View Item Page - ShareGoods</title>
+     <% include ../partials/head %>
    </head>
    <body>
       <div class="container">
 
         <!--  Navigation bar -->
         <div class="medium-top-buffer">
-          <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-               <div class="container">
-                 <div class="navbar-header">
-                   <a class="navbar-brand" href="#">
-                     <img alt="Share Goods" src="">
-                   </a>
-                   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                     Menu
-                   </button>
-                   <a class="navbar-brand" href="index.html"></a>
-                 </div>
-                 <div class="navbar-collapse collapse">
-                   <ul class="nav navbar-nav navbar-left">
-                     <li><a href="index.html">Home</a></li>
-                     <li><a href="about.html">Messages</a></li>
-                     <li class="dropdown">
-                       <a class="dropdown-toggle" data-toggle="dropdown" href="calendar.html"> Actions <b class="caret"></b></a>
-                       <ul class="dropdown-menu">
-                         <li><a href="tag.html">Add Listing</a></li>
-                         <li><a href="#"> Search</a></li>
-                       </ul>
-                     </li>
-                     <li><a href ="#">
-                     <li><a href="services.html">Services</a></li>
-                   </ul>
-                   <form class="navbar-form navbar-left">
-                     <div class="form-group">
-                       <input type="text" class="form-control" placeholder="Your best starts here...">
-                     </div>
-                     <button type="submit" class="btn btn-default">Search</button>
-                   </form>
-                   <ul class="nav navbar-nav navbar-right">
-                     <li><a>Sign Out</a></li>
-                   </ul>
-                 </div>
-               </div>
-             </nav>
+          <% include ../partials/navigation %>
         </div>
 
         <!-- Row for page header information -->
