added google maps API back, fixed head partial and deleted old logo, also added code in server to use assets folder files

--- a/views/pages/view-item.ejs
+++ b/views/pages/view-item.ejs
@@ -2,6 +2,16 @@
 <html lang = "en">
    <head>
      <% include ../partials/head %>
+
+     <!-- CSS styling for page -->
+     <link rel="stylesheet" href="../../assets/css/view-item-style.css">
+
+     <!-- Javascript script for page -->
+     <script src="../../assets/scripts/view-item-script.js"> </script>
+
+     <!-- Import Google Maps API  -->
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEhVniNNOqfh0w3vHJouB8XmUu_z8Y298&callback=initMap" async defer></script>
+
    </head>
    <body>
       <div class="container">
@@ -16,7 +26,7 @@
 
           <!-- ShareGoods Logo, page title -->
           <div class="col-md-5">
-            <img id="sharegoodslogo" src="../assets/images/share-goods-logo.png" alt="ShareGoods Logo">
+            <img id="sharegoodslogo" src="../../assets/images/share-goods-logo.png" alt="ShareGoods Logo">
           </div>
 
           <div class="col-md-7">
@@ -37,7 +47,7 @@
             <!-- Item image -->
             <div id="itemImage">
               <!-- Dynamically load image here, example image for now -->
-              <img id="itemImage" src="../assets/images/example-image.png">
+              <img id="itemImage" src="../../assets/images/example-image.png">
             </div>
 
 
