--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -5,6 +5,7 @@
     <title>Node Authentication</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+    <script src="../assets/scripts/signup.js"> </script>
     <style>
         body        { padding-top:80px; }
     </style>
@@ -22,7 +23,7 @@
         <% } %>
 
         <!-- LOGIN FORM -->
-        <form action="/signup" method="post">
+        <form id="signup" action="/signup" method="post">
           <div class="form-group">
               <label>First Name</label>
               <input type="text" class="form-control" name="firstName">
@@ -51,7 +52,6 @@
                 <label>Email</label>
                 <input type="text" class="form-control" name="email">
             </div>
-
 
             <button type="submit" class="btn btn-warning btn-lg">Signup</button>
         </form>
