--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -25,11 +25,31 @@
         <form action="/signup" method="post">
             <div class="form-group">
                 <label>Email</label>
-                <input type="text" class="form-control" name="email">
+                <input type="text" class="form-control" name="email" value="ian.hibbert@mail.utoronto.ca">
             </div>
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" class="form-control" name="password">
+                <input type="password" class="form-control" name="password" value="ian123">
+            </div>
+
+            <div class="form-group">
+                <label>First Name</label>
+                <input type="text" class="form-control" name="first-name" value="Ian">
+            </div>
+
+            <div class="form-group">
+                <label>Last Name</label>
+                <input type="text" class="form-control" name="last-name" value="Hibbert">
+            </div>
+
+            <div class="form-group">
+                <label>Phone Number</label>
+                <input type="text" class="form-control" name="phone" value="123-456-7890">
+            </div>
+
+            <div class="form-group">
+                <label>Address</label>
+                <input type="text" class="form-control" name="address" value="sharegoods rd">
             </div>
 
             <button type="submit" class="btn btn-warning btn-lg">Signup</button>
