Fixing errors first post requests work

--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -23,7 +23,7 @@
         <% } %>
 
         <!-- LOGIN FORM -->
-        <form id="signup" action="/signup" method="post">
+        <form id="signup" action="/api/user" method="post">
           <div class="form-group">
               <label>First Name</label>
               <input type="text" class="form-control" name="firstName">
