--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -22,14 +22,14 @@
         <% } %>
 
         <!-- LOGIN FORM -->
-        <form action="/login" method="post">
+        <form action="/api/auth/login" method="post">
             <div class="form-group">
                 <label>Email</label>
-                <input type="text" class="form-control" name="email">
+                <input type="email" class="form-control" name="email" required>
             </div>
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" class="form-control" name="password">
+                <input type="password" class="form-control" name="password" required>
             </div>
 
             <button type="submit" class="btn btn-warning btn-lg">Login</button>
