--- a/views/pages/post-new-listing.ejs
+++ b/views/pages/post-new-listing.ejs
@@ -35,7 +35,7 @@
      <h1>Post A new Listing </h1>
      <div id="menu">
 
-        <form id="add" action='/listing' method="post">
+        <form id="add" action='/api/listing' method="post">
             <div class="form_element">
                 <label id="email1">
                     <span class="label">Email :</span>
