--- a/views/pages/view-item.ejs
+++ b/views/pages/view-item.ejs
@@ -4,7 +4,7 @@
      <% include ../partials/head %>
 
      <!-- CSS styling for page -->
-     <link rel="stylesheet" src="../../assets/css/view-item-style.css">
+     <link rel="stylesheet" type="text/css" href="../../assets/css/view-item-style.css">
 
      <!-- Javascript script for page -->
      <script src="../../assets/scripts/view-item-script.js"> </script>
