--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -25,11 +25,11 @@
         <form action="/api/auth/login" method="post">
             <div class="form-group">
                 <label>Email</label>
-                <input type="email" class="form-control" name="email" required>
+                <input type="email" class="form-control" name="email" value="ian.hibbert@mail.utoronto.ca"required>
             </div>
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" class="form-control" name="password" required>
+                <input type="password" class="form-control" name="password" value="hi" required>
             </div>
 
             <button type="submit" class="btn btn-warning btn-lg">Login</button>
