Fixing CSS styling issues

--- a/views/pages/view-item.ejs
+++ b/views/pages/view-item.ejs
@@ -5,7 +5,7 @@
      <% include ../partials/head %>
 
      <!-- CSS styling for page -->
-     <link rel="stylesheet" href="../../assets/css/view-item-style.css">
+     <link rel="stylesheet" href="../css/view-item-style.css">
 
      <!-- Javascript script for page -->
      <script src="../../assets/scripts/view-item-script.js"> </script>
