adding file templates, starting front end dev

--- a/views/pages/search-item.ejs
+++ b/views/pages/search-item.ejs
@@ -3,6 +3,13 @@
 
    <head>
      <%include ../partials/head %>
+
+      <!-- CSS styling for page -->
+      <link rel="stylesheet" href="../css/search-item-style.css">
+
+      <!-- Javascript script for page -->
+      <script src="../../assets/scripts/search-item-script.js"> </script>
+
    </head>
 
    <body>
