--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,3 +1,8 @@
+<head>
+  <!-- CSS styling for page -->
+  <link rel="stylesheet" href="../css/navigation-bar-style.css">
+
+</head>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
      <div class="container">
        <div class="navbar-header">
@@ -25,7 +30,7 @@
          </ul>
          <form class="navbar-form navbar-left">
            <div class="form-group">
-             <input type="text" class="form-control" placeholder="Your best starts here...">
+             <input id="searchBar" type="text" class="form-control" placeholder="Your best starts here...">
            </div>
            <button type="submit" class="btn btn-default">Search</button>
          </form>
