working on search-item page

--- a/views/pages/search-item.ejs
+++ b/views/pages/search-item.ejs
@@ -20,6 +20,17 @@
           <%include ../partials/navigation %>
         </div>
 
+        <div class="row">
+          <div class="col-md-12">
+            <p> hey </p>
+
+          </div>
+
+        </div>
+
+
+
+
 
    </body>
 
