--- a/assets/css/navigation-bar-style.css
+++ b/assets/css/navigation-bar-style.css
@@ -10,8 +10,8 @@
     background-position: 10px 10px;
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
+    /*-webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;*/
 }
 
 #searchBar{
