--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -30,9 +30,9 @@
          </ul>
          <form class="navbar-form navbar-left">
            <div class="form-group">
-             <input id="searchBar" type="text" class="form-control" placeholder="Your best starts here...">
+             <input id="searchButton" type="text" class="form-control" placeholder="Your best starts here...">
            </div>
-           <button type="submit" class="btn btn-default">Search</button>
+           <button id="submitButton" type="submit" class="btn btn-default">Search</button>
          </form>
          <ul class="nav navbar-nav navbar-right">
            <li><a>Sign Out</a></li>
