still trying to solve connection issue

--- a/views/pages/search-item.ejs
+++ b/views/pages/search-item.ejs
@@ -16,14 +16,28 @@
       <div class="container">
 
         <!--  Navigation bar -->
-        <div class="medium-top-buffer">
+        <div id="navBar">
           <%include ../partials/navigation %>
         </div>
 
         <div class="row">
           <div class="col-md-12">
-            <p> hey </p>
+            <h1> Item Listings </h1>
+          </div>
+        </div>
 
+
+        <div class="row">
+          <div class="col-md-2">
+            <div id="categories">
+              
+            </div>
+          </div>
+
+
+          <div class="col-md-10">
+            <div id="data">
+            </div>
           </div>
 
         </div>
