--- a/assets/css/search-item-style.css
+++ b/assets/css/search-item-style.css
@@ -1,1 +1,17 @@
 
+h1 {
+  font-size: 30px;
+  text-align: center;
+}
+
+#data {
+  width: 100%;
+  height: 850px; /* change to 100% after loading implemented */
+  border: 1px solid black;
+}
+
+#categories {
+  width: 100%;
+  height: 850px; /* change to 100% after loading implemented */
+  border: 1px solid black;
+}
