--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -3,7 +3,7 @@
   <link rel="stylesheet" href="../css/navigation-bar-style.css">
 
 </head>
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav id ="navigation" class="navbar navbar-default navbar-fixed-top" role="navigation">
      <div class="container">
        <div class="navbar-header">
          <a class="navbar-brand" href="#">
@@ -28,11 +28,13 @@
            <li><a href ="#">
            <li><a href="services.html">Services</a></li>
          </ul>
-         <form class="navbar-form navbar-left">
+         <form id ="submitId"class="navbar-form navbar-left" action='/api/listing' method="get">
            <div class="form-group">
-             <input id="searchButton" type="text" class="form-control" placeholder="Your best starts here...">
+             <input id="searchBox" type="text" class="form-control" placeholder="Your best starts here...">
            </div>
+           <div>
            <button id="submitButton" type="submit" class="btn btn-default">Search</button>
+          </div>
          </form>
          <ul class="nav navbar-nav navbar-right">
            <li><a>Sign Out</a></li>
