--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -37,7 +37,7 @@
           </div>
          </form>
          <ul class="nav navbar-nav navbar-right">
-           <li><a>Sign Out</a></li>
+           <li><a href="/logout">Sign Out</a></li>
          </ul>
        </div>
      </div>
