--- a/views/pages/search-item.ejs
+++ b/views/pages/search-item.ejs
@@ -20,6 +20,9 @@
           <%include ../partials/navigation %>
         </div>
 
+        <div class="medium-top-buffer">
+        </div>
+
         <div class="row">
           <div class="col-md-12">
             <h1> Item Listings </h1>
@@ -30,7 +33,16 @@
         <div class="row">
           <div class="col-md-2">
             <div id="categories">
-              
+              <h2>Categories</h2>
+              <ul id="selectable">
+                <li class="ui-widget-content">Item 1</li>
+                <li class="ui-widget-content">Item 2</li>
+                <li class="ui-widget-content">Item 3</li>
+                <li class="ui-widget-content">Item 4</li>
+                <li class="ui-widget-content">Item 5</li>
+                <li class="ui-widget-content">Item 6</li>
+                <li class="ui-widget-content">Item 7</li>
+              </ul>
             </div>
           </div>
 
