--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -24,8 +24,8 @@
         <!-- LOGIN FORM -->
         <form action="/api/auth/login" method="post">
             <div class="form-group">
-                <label>Email</label>
-                <input type="email" class="form-control" name="email" value="ian.hibbert@mail.utoronto.ca"required>
+                <label>Username</label>
+                <input type="text" class="form-control" name="username" value="ian" required>
             </div>
             <div class="form-group">
                 <label>Password</label>
