--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -24,42 +24,42 @@
 
         <!-- LOGIN FORM -->
 
-        <form id="signup" action='/api/user' method="post">
+        <form id="signup" action='/api/auth/signup' method="post">
 
             <div class="form-group">
                 <label>Username</label>
-                <input type="text" class="form-control" name="username" value="ian">
+                <input type="text" class="form-control" name="username" value="eanh" required>
             </div>
 
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" class="form-control" name="password" value="ian123">
+                <input type="password" class="form-control" name="password" value="ian123" required>
             </div>
 
             <div class="form-group">
                 <label>First Name</label>
-                <input type="text" class="form-control" name="firstName" value="Ian">
+                <input type="text" class="form-control" name="firstName" value="Ian" required>
             </div>
 
             <div class="form-group">
                 <label>Last Name</label>
-                <input type="text" class="form-control" name="lastName" value="Hibbert">
+                <input type="text" class="form-control" name="lastName" value="Hibbert" required>
             </div>
 
             <div class="form-group">
                 <label>Email</label>
-                <input type="text" class="form-control" name="email" value="ian.hibbert@mail.utoronto.ca">
+                <input type="email" class="form-control" name="email" value="ian@utoronto.ca" required>
 
             </div>
 
             <div class="form-group">
                 <label>Phone Number</label>
-                <input type="text" class="form-control" name="phone" value="123-456-7890">
+                <input type="text" class="form-control" name="phone" value="4567" required>
             </div>
 
             <div class="form-group">
                 <label>Address</label>
-                <input type="text" class="form-control" name="address" value="sharegoods rd">
+                <input type="text" class="form-control" name="address" value="sharegoodiess rd" required>
             </div>
 
             <button type="submit" class="btn btn-warning btn-lg">Signup</button>
