search item page almost complete

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -17,7 +17,7 @@
        <div class="navbar-collapse collapse">
          <ul class="nav navbar-nav navbar-left">
            <li><a href="index.html">Home</a></li>
-           <li><a href="about.html">Messages</a></li>
+           <li><a href="/view">Messages</a></li>
            <li class="dropdown">
              <a class="dropdown-toggle" data-toggle="dropdown" href="calendar.html"> Actions <b class="caret"></b></a>
              <ul class="dropdown-menu">
