--- a/views/pages/search-item.ejs
+++ b/views/pages/search-item.ejs
@@ -35,13 +35,15 @@
             <div id="categories">
               <h2>Categories</h2>
               <ul id="selectable">
-                <li class="ui-widget-content">Item 1</li>
-                <li class="ui-widget-content">Item 2</li>
-                <li class="ui-widget-content">Item 3</li>
-                <li class="ui-widget-content">Item 4</li>
-                <li class="ui-widget-content">Item 5</li>
-                <li class="ui-widget-content">Item 6</li>
-                <li class="ui-widget-content">Item 7</li>
+                <li class="ui-widget-content">All Items</li>
+                <li class="ui-widget-content">Sports</li>
+                <li class="ui-widget-content">Parties</li>
+                <li class="ui-widget-content">Electronics</li>
+                <li class="ui-widget-content">Arts and Crafts</li>
+                <li class="ui-widget-content">Children</li>
+                <li class="ui-widget-content">Office</li>
+                <li class="ui-widget-content">Home</li>
+                <li class="ui-widget-content">Other</li>
               </ul>
             </div>
           </div>
