Side bar works and main.ejs is added

--- a/assets/css/search-item-style.css
+++ b/assets/css/search-item-style.css
@@ -6,13 +6,13 @@ h1 {
 
 #data {
   width: 100%;
-  height: 100%; /* change to 100% after loading implemented */
+  height: 100%; /* TODO: change to 100% after loading implemented */
   border: 1px solid black;
 }
 
 #categories {
   width: 100%;
-  height: 550px; /* change to 100% after loading implemented */
+  height: 550px; /*TODO: change to 100% after loading implemented */
   border: 1px solid black;
 }
 
