--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -16,12 +16,12 @@
        </div>
        <div class="navbar-collapse collapse">
          <ul class="nav navbar-nav navbar-left">
-           <li><a href="index.html">Home</a></li>
+           <li><a href="/">Home</a></li>
            <li><a href="/view">Messages</a></li>
            <li class="dropdown">
              <a class="dropdown-toggle" data-toggle="dropdown" href="calendar.html"> Actions <b class="caret"></b></a>
              <ul class="dropdown-menu">
-               <li><a href="tag.html">Add Listing</a></li>
+               <li><a href="/listing">Add Listing</a></li>
                <li><a href="#"> Search</a></li>
              </ul>
            </li>
