Filering the query

--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -6,6 +6,7 @@
     <!-- CSS Styling for page -->
     <link rel="stylesheet" href="../css/home-page-style.css">
     <!-- JS Files for the page -->
+    <script src="../../assets/scripts/main-page.js"> </script>
   </head>
   <body>
     <div class="container">
@@ -31,7 +32,7 @@
             </div>
             <div class="checkbox">
               <label>
-                <input type="checkbox"> Available Now
+                <input id="availNow" type="checkbox" value="true"> Available Now
               </label>
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
