almost complete search item, view itme page

--- a/views/pages/view-item.ejs
+++ b/views/pages/view-item.ejs
@@ -19,15 +19,17 @@
       <div class="container">
 
         <!--  Navigation bar -->
-        <div class="medium-top-buffer">
           <% include ../partials/navigation %>
-        </div>
 
         <!-- Row for page header information -->
         <div class="row" id="row1">
 
-          <div class="col-md-7">
-            <h1 id="userItemHeader"> User ______'s Item! </h1>
+          <div class="col-md-11">
+            <h1 id="itemHeader"> </h1>
+          </div>
+
+          <div class="col-md-1">
+            <button id="requestButton">Request Item</button>
           </div>
         </div>
 
@@ -54,19 +56,14 @@
           <div class="col-md-6">
             <div id="itemDetails">
               <p id="itemDetailsHeader"> Item Details </p>
-              <p id="itemDescription"> Item Description: </p>
+              <!-- <p id="itemDescription"> Item Description: </p>
+              <p id="itemDescription"> Category: </p>
               <p id="itemOriginalPrice"> Original Price: </p>
               <p id="itemCurrentCondition"> Current Condition: </p>
               <p id="itemRating"> Rating: </p>
-              <p id="itemOtherInformation"> Other Information: </p>
+              <p id="itemOtherInformation"> Other Information: </p> -->
             </div>
           </div>
-
-          <div id="requestButtonDiv">
-            <button id="requestButton">Request Item</button>
-          </div>
-
-
 
         </div>
 
