--- a/assets/css/view-item-style.css
+++ b/assets/css/view-item-style.css
@@ -9,10 +9,9 @@
 }
 
 /* Styling for page header */
-#userItemHeader {
-  text-align:left;
-  vertical-align: bottom;
-  font-size: 62px;
+#itemHeader {
+  text-align:center;
+  font-size: 50px;
 }
 
 #itemDetails {
@@ -36,7 +35,7 @@
 }
 
 #map {
-  height: 100%;
+  height: 90%;
 }
 
 #mapCanvas {
@@ -46,6 +45,10 @@
 
 #itemLocation {
   font-size: 20px;
+}
+
+#requestButton {
+  vertical-align: bottom;
 }
 
 
