--- a/views/pages/post-new-listing.ejs
+++ b/views/pages/post-new-listing.ejs
@@ -2,11 +2,12 @@
 <html lang = "en">
 
    <head>
+      <% include ../partials/head %>
 
       <meta charset = "utf-8">
       <meta http-equiv = "X-UA-Compatible" content = "IE = edge">
       <meta name = "viewport" content = "width = device-width, initial-scale = 1">
-      <link rel="stylesheet" href="../assets/css/post-new-listing.css">
+      <link rel="stylesheet" href="../css/post-new-listing.css">
       <!-- Import Jquery API -->
       <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
@@ -32,6 +33,8 @@
    </head>
 
    <body>
+     <% include ../partials/navigation %>
+
      <h1>Post A new Listing </h1>
      <div id="menu">
 
