added redirect to request/:id

--- a/views/pages/view-item.ejs
+++ b/views/pages/view-item.ejs
@@ -29,7 +29,7 @@
           </div>
 
           <div class="col-md-1">
-            <button id="requestButton">Request Item</button>
+            <button id="requestButton" onclick="redirectRequest()">Request Item</button>
           </div>
         </div>
 
