--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -6,8 +6,8 @@
 <nav id ="navigation" class="navbar navbar-default navbar-fixed-top" role="navigation">
      <div class="container">
        <div class="navbar-header">
-         <a class="navbar-brand" href="#">
-           <img id="logo"alt="Share Goods" src="../../images/logo-share-goods2.png">
+         <a class="navbar-brand" href="/main">
+           <img id="logo"alt="Share Goods"  src="../../images/logo-share-goods2.png">
          </a>
          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
            Menu
