--- a/views/pages/post-new-listing.ejs
+++ b/views/pages/post-new-listing.ejs
@@ -6,16 +6,8 @@
       <meta charset = "utf-8">
       <meta http-equiv = "X-UA-Compatible" content = "IE = edge">
       <meta name = "viewport" content = "width = device-width, initial-scale = 1">
-      <link rel="stylesheet" href="../assets/css/post-new-listing.css">
-      <!-- Import Jquery API -->
-      <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-
-      <!-- Latest compiled and minified CSS -->
-
-      <!-- Optional theme -->
-
-      <!-- Latest compiled and minified JavaScript -->
+  
+      <%include ../partials/head %>
 
       <!-- CSS styling for page -->
 
@@ -24,10 +16,6 @@
       <!-- Javascript script for page -->
 
       <!-- Import Google Maps API  -->
-
-
-   <title>Post Listing Page - ShareGoods</title>
-
 
    </head>
 
