--- a/views/pages/admin/main.ejs
+++ b/views/pages/admin/main.ejs
@@ -1,8 +1,4 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
       <% include ../../partials/head %>
     </head>
@@ -19,7 +15,6 @@
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-6">
           <h2>Listings</h2>
@@ -34,8 +29,7 @@
       </div>
 
       <hr>
-
       <footer>
-        <p>&copy; Company 2015</p>
+        <% include ../../partials/footer %>
       </footer>
 </html>
