Admin index pages is working. Now add button to edit or delete both

--- a/views/pages/admin/main.ejs
+++ b/views/pages/admin/main.ejs
@@ -10,7 +10,7 @@
       <div class="container">
         <h1>Welcome to Share Goods Admin Dashboard</h1>
         <p>This is the first stop to manage your application. Keep your users happy!</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Start Now &raquo;</a></p>
+        <p id="all"><a id= "main" href ="/admin/index/user" class="btn btn-primary btn-lg" href="#" role="button">Start Now &raquo;</a></p>
       </div>
     </div>
 
@@ -19,12 +19,12 @@
         <div class="col-md-6">
           <h2>Listings</h2>
           <p>Manage all listings. Create, delete and edit listings in the system. Make sure that everything is consistent.</p>
-          <p><a class="btn btn-default" href="#" role="button">Go Now &raquo;</a></p>
+          <p id="listings"><a  href="/admin/index/listing" class="btn btn-default" role="button">Go Now &raquo;</a></p>
         </div>
         <div class="col-md-6">
           <h2>Users</h2>
           <p>Manage user profiles. Create, delete and edit user profiles. Make sure that you add the correct information.</p>
-          <p><a class="btn btn-default" href="#" role="button">Go Now &raquo;</a></p>
+          <p id="users"><a  href="/admin/index/user" class="btn btn-default"role="button">Go Now &raquo;</a></p>
        </div>
       </div>
 
