--- a/views/pages/admin/index.ejs
+++ b/views/pages/admin/index.ejs
@@ -2,7 +2,7 @@
 <head>
   <%include ../../partials/head %>
   <!-- CSS styling for page -->
-  <link rel="stylesheet" href="../../../css/index-admin.css">
+  <link rel="stylesheet" href="../css/index-admin.css">
   <script src="../../../assets/scripts/admin/index-admin.js"></script>
 </head>
 <body>
