--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -3,7 +3,7 @@
   <link rel="stylesheet" href="../css/navigation-bar-style.css">
 
 </head>
-<nav id ="navigation" class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav id ="navigation" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
      <div class="container">
        <div class="navbar-header">
          <a class="navbar-brand" href="/main">
@@ -19,23 +19,23 @@
            <li><a href="/main">Home</a></li>
            <li><a href="/main">Messages</a></li>
            <li class="dropdown">
-             <a class="dropdown-toggle" data-toggle="dropdown" href="calendar.html"> Actions <b class="caret"></b></a>
+             <a class="dropdown-toggle" role ="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" > Actions <span class="caret"></span></a>
              <ul class="dropdown-menu">
                <li><a href="/listing">Add Listing</a></li>
-               <li><a href="/search"> Search</a></li>
+               <li><a href="/search"> Custom Product Search</a></li>
+               <li><a href=""> My Requests </a></li>
              </ul>
            </li>
-           <li><a href ="#">
            <li><a href="/main">Services</a></li>
          </ul>
          <form id ="submitId" class="navbar-form navbar-left" action='/api/listing' method="get">
            <div class="form-group">
              <input id="searchBox" type="text" class="form-control" placeholder="Your best starts here...">
-             <button id="submitButton" type="submit" class="btn btn-default">Search</button>
+             <button id="submitButton" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>Search</button>
            </div>
          </form>
          <ul class="nav navbar-nav navbar-right">
-           <li><a href="/logout">Sign Out</a></li>
+           <li><a href="/logout"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Sign Out</a></li>
          </ul>
        </div>
      </div>
