Changing navigation bar

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -7,7 +7,7 @@
      <div class="container">
        <div class="navbar-header">
          <a class="navbar-brand" href="/main">
-           <img id="logo"alt="Share Goods"  src="../../images/logo-share-goods2.png">
+           <img id="logo"alt="Share Goods"  src="../../images/logo.png">
          </a>
          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
            Menu
@@ -17,7 +17,7 @@
        <div class="navbar-collapse collapse">
          <ul class="nav navbar-nav navbar-left">
            <li><a href="/main">Home</a></li>
-           <li><a href="/main">Messages</a></li>
+           <li><a href="/main">Requests</a></li>
            <li class="dropdown">
              <a class="dropdown-toggle" role ="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" > Actions <span class="caret"></span></a>
              <ul class="dropdown-menu">
