--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,6 +1,7 @@
 <head>
   <!-- CSS styling for page -->
   <link rel="stylesheet" href="../css/navigation-bar-style.css">
+  <script src="../assets/scripts/navigation-bar-script.js"> </script>
 
 </head>
 <nav id ="navigation" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -28,7 +29,7 @@
            </li>
            <li><a href="/main/<%= username %>">Services</a></li>
          </ul>
-         <form id ="submitId" class="navbar-form navbar-left" action='/api/listing' method="get">
+         <form id ="submitId" class="navbar-form navbar-left">
            <div class="form-group">
              <input id="searchBox" type="text" class="form-control" placeholder="Your best starts here...">
              <button id="submitButton" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>Search</button>
