--- a/views/pages/view-item.ejs
+++ b/views/pages/view-item.ejs
@@ -19,7 +19,7 @@
       <div class="container">
 
         <!--  Navigation bar -->
-          <% include ../partials/navigation %>
+          <!-- <% include ../partials/navigation %> -->
 
         <!-- Row for page header information -->
         <div class="row" id="row1">
@@ -56,12 +56,7 @@
           <div class="col-md-6">
             <div id="itemDetails">
               <p id="itemDetailsHeader"> Item Details </p>
-              <!-- <p id="itemDescription"> Item Description: </p>
-              <p id="itemDescription"> Category: </p>
-              <p id="itemOriginalPrice"> Original Price: </p>
-              <p id="itemCurrentCondition"> Current Condition: </p>
-              <p id="itemRating"> Rating: </p>
-              <p id="itemOtherInformation"> Other Information: </p> -->
+
             </div>
           </div>
 
