implemented listing feed for main page

--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -24,7 +24,7 @@
 
         <!-- LOGIN FORM -->
 
-        <form id="signup" action='/api/auth/signup' method="post">
+        <form id="signup" action='/api/signup' method="post">
 
             <div class="form-group">
                 <label>Username</label>
