fixed all broken links to assets folder caused by wrong path

--- a/views/pages/admin/index.ejs
+++ b/views/pages/admin/index.ejs
@@ -2,8 +2,8 @@
 <head>
   <%include ../../partials/head %>
   <!-- CSS styling for page -->
-  <link rel="stylesheet" href="../css/index-admin.css">
-  <script src="../../../assets/scripts/admin/index-admin.js"></script>
+  <link rel="stylesheet" href="/css/index-admin.css">
+  <script src="/scripts/admin/index-admin.js"></script>
 </head>
 <body>
   <%include ../../partials/navigation %>
