--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -4,9 +4,9 @@
 <head>
     <% include ../partials/head %>
     <!-- CSS Styling for page -->
-    <link rel="stylesheet" href="../css/home-page-style.css">
+    <link rel="stylesheet" href="/css/home-page-style.css">
     <!-- JS Files for the page -->
-    <script src="../../assets/scripts/main-page.js"></script>
+    <script src="/scripts/main-page.js"></script>
 </head>
 <body>
 <div class="container">
