--- a/views/pages/my-product-requests.ejs
+++ b/views/pages/my-product-requests.ejs
@@ -11,8 +11,8 @@
 
 
       <!-- CSS styling for page -->
-      <link rel="stylesheet" href="../css/myrequest.css">
-      <script src="../assets/scripts/myrequest.js"> </script>
+      <link rel="stylesheet" href="/css/myrequest.css">
+      <script src="/scripts/myrequest.js"> </script>
 
       <!-- Javascript script for page -->
 
