--- a/views/pages/product-request.ejs
+++ b/views/pages/product-request.ejs
@@ -9,7 +9,7 @@
         body        { padding-top:80px; }
     </style>
     <%include ../partials/head %>
-    <script src="../assets/scripts/post-request.js"> </script>
+    <script src="/scripts/post-request.js"> </script>
 </head>
 <body>
   <% include ../partials/navigation %>
