--- a/views/pages/requests.ejs
+++ b/views/pages/requests.ejs
@@ -2,8 +2,8 @@
 <head>
   <%include ../partials/head %>
   <!-- CSS styling for page -->
-  <link rel="stylesheet" href="../css/index-admin.css">
-  <script src="../../../assets/scripts/all-requests.js"></script>
+  <link rel="stylesheet" href="/css/index-admin.css">
+  <script src="/scripts/all-requests.js"></script>
 </head>
 <body>
   <%include ../partials/navigation %>
