--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,7 +9,7 @@
 
 <link rel="icon"
       type="image/png"
-      href="/assets/images/rsz_logos.png">
+      href="/images/rsz_logos.png">
 
 <!-- Latest compiled and minified Boostrap JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
