--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,7 +1,7 @@
 <head>
   <!-- CSS styling for page -->
-  <link rel="stylesheet" href="../css/navigation-bar-style.css">
-  <script src="../assets/scripts/navigation-bar-script.js"> </script>
+  <link rel="stylesheet" href="/css/navigation-bar-style.css">
+  <script src="/scripts/navigation-bar-script.js"> </script>
 
 </head>
 <nav id ="navigation" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
