--- a/views/pages/post-new-listing.ejs
+++ b/views/pages/post-new-listing.ejs
@@ -7,12 +7,12 @@
       <meta charset = "utf-8">
       <meta http-equiv = "X-UA-Compatible" content = "IE = edge">
       <meta name = "viewport" content = "width = device-width, initial-scale = 1">
-      <link rel="stylesheet" href="../css/post-new-listing.css">
+      <link rel="stylesheet" href="/css/post-new-listing.css">
 
 
       <!-- CSS styling for page -->
 
-      <script src="../assets/scripts/post-new-listing.js"> </script>
+      <script src="/scripts/post-new-listing.js"> </script>
 
       <!-- Javascript script for page -->
 
@@ -31,7 +31,7 @@
 
              <!-- show any messages that come back with authentication -->
 
-             <!-- LOGIN FORM -->
+             <!-- LOGIN  FORM -->
 
              <form id="add" action='/api/listing' method="post">
 
