--- a/views/pages/search-item.ejs
+++ b/views/pages/search-item.ejs
@@ -5,10 +5,10 @@
      <%include ../partials/head %>
 
       <!-- CSS styling for page -->
-      <link rel="stylesheet" href="../css/search-item-style.css">
+      <link rel="stylesheet" href="/css/search-item-style.css">
 
       <!-- Javascript script for page -->
-      <script src="../../assets/scripts/search-item-script.js"> </script>
+      <script src="/scripts/search-item-script.js"> </script>
 
    </head>
 
