--- a/views/pages/view-item.ejs
+++ b/views/pages/view-item.ejs
@@ -6,10 +6,10 @@
 
      <!-- CSS styling for page -->
 
-     <link rel="stylesheet" href="/assets/css/view-item-style.css">
+     <link rel="stylesheet" href="/css/view-item-style.css">
 
      <!-- Javascript script for page -->
-     <script src="/assets/scripts/view-item-script.js"> </script>
+     <script src="/scripts/view-item-script.js"> </script>
 
      <!-- Import Google Maps API  -->
      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEhVniNNOqfh0w3vHJouB8XmUu_z8Y298&callback=initMap" async defer></script>
