adding user profile

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -37,11 +37,7 @@
          </form>
          <ul class="nav navbar-nav navbar-right">
            <li class="dropdown">
-             <a class="dropdown-toggle" role ="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" > Reviews <span class="caret"></span></a>
-             <ul class="dropdown-menu">
-               <li><a href="/<%= username %>/listing-reviews">My Product Reviews</a></li>
-               <li><a href="/<%= username %>/my-reviews"> My Reviews </a></li>
-             </ul>
+             <li><a href="/<%= username %>/profile">Profile</a></li>
            </li>
            <li><a href="/logout"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Sign Out</a></li>
          </ul>
