--- a/views/pages/search-item.ejs
+++ b/views/pages/search-item.ejs
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="../css/search-item-style.css">
 
       <!-- Javascript script for page -->
-      <script src="../../assets/scripts/search-item-script.js"> </script>
+      <script src="../../assets/scripts/search-script.js"> </script>
 
    </head>
 
@@ -51,6 +51,9 @@
 
           <div class="col-md-10">
             <div id="data">
+              <!--Content-->
+              <div id ="list" class="list-group">
+              </div>
             </div>
           </div>
 
