fixed view-item page

--- a/views/pages/view-item.ejs
+++ b/views/pages/view-item.ejs
@@ -46,7 +46,7 @@
             <!-- Item image -->
             <div id="itemImage">
               <!-- Dynamically load image here, example image for now -->
-              <img id="itemImage">
+              <img id="itemImage" src="https://unsplash.it/200/300">
             </div>
 
 
@@ -58,31 +58,18 @@
               <p id="itemDetailsHeader"> Item Details </p>
 
             </div>
-          </div>
-
-        </div>
-
-        <!-- Row for padding -->
-        <div class="small-top-buffer">
-        </div>
-
-        <div class="row" id="row3">
-          <div class="col-md-6">
-            <div id="userOtherItems">
-              <!-- Dynamically load information about users other items -->
-            </div>
-          </div>
-
-          <div class="col-md-2">
             <p id="itemLocation"> Location: </p>
-          </div>
-
-          <!--  Google Maps -->
-          <div class="col-md-4">
             <div id="mapCanvas">
               <div id="map"> </div>
             </div>
+
           </div>
+
+        </div>
+
+        <div class="row" id="row3">
+
+
 
         </div>
 
