Fixing search page redirection

--- a/views/pages/search-item.ejs
+++ b/views/pages/search-item.ejs
@@ -8,11 +8,7 @@
       <link rel="stylesheet" href="/css/search-item-style.css">
 
       <!-- Javascript script for page -->
-<<<<<<< HEAD
-      <script src="../../assets/scripts/search-script.js"> </script>
-=======
-      <script src="/scripts/search-item-script.js"> </script>
->>>>>>> cb8ba3b7b0bf4eb160f065766a59b72c0ecb6f9f
+      <script src="/scripts/search-script.js"> </script>
 
    </head>
 
@@ -62,11 +58,6 @@
           </div>
 
         </div>
-
-
-
-
-
    </body>
 
 </html>
