fixed redirect to request page

--- a/views/pages/view-item.ejs
+++ b/views/pages/view-item.ejs
@@ -46,7 +46,7 @@
             <!-- Item image -->
             <div id="itemImage">
               <!-- Dynamically load image here, example image for now -->
-              <img id="itemImage" src="https://unsplash.it/200/300">
+              <img id="itemImage" src="https://unsplash.it/200/300/?random">
             </div>
 
 
