--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -5,6 +5,9 @@
     <title>Node Authentication</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+    <link rel="icon"
+          type="image/png"
+          href="/images/rsz_logos.png">
     <style>
         body        { padding-top:80px; }
     </style>
