--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -5,6 +5,9 @@
     <title>Node Authentication</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+    <link rel="icon"
+          type="image/png"
+          href="/images/rsz_logos.png">
 
     <style>
         body        { padding-top:80px; }
@@ -24,42 +27,42 @@
 
         <!-- LOGIN FORM -->
 
-        <form id="signup" action='/api/signup' method="post">
+        <form id="signup" action='/api/auth/signup' method="post">
 
             <div class="form-group">
                 <label>Username</label>
-                <input type="text" class="form-control" name="username" value="eanh" required>
+                <input type="text" class="form-control" name="username" required>
             </div>
 
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" class="form-control" name="password" value="ian123" required>
+                <input type="password" class="form-control" name="password" required>
             </div>
 
             <div class="form-group">
                 <label>First Name</label>
-                <input type="text" class="form-control" name="firstName" value="Ian" required>
+                <input type="text" class="form-control" name="firstName" required>
             </div>
 
             <div class="form-group">
                 <label>Last Name</label>
-                <input type="text" class="form-control" name="lastName" value="Hibbert" required>
+                <input type="text" class="form-control" name="lastName" required>
             </div>
 
             <div class="form-group">
                 <label>Email</label>
-                <input type="email" class="form-control" name="email" value="ian@utoronto.ca" required>
+                <input type="email" class="form-control" name="email" required>
 
             </div>
 
             <div class="form-group">
                 <label>Phone Number</label>
-                <input type="text" class="form-control" name="phone" value="4567" required>
+                <input type="text" class="form-control" name="phone" required>
             </div>
 
             <div class="form-group">
                 <label>Address</label>
-                <input type="text" class="form-control" name="address" value="sharegoodiess rd" required>
+                <input type="text" class="form-control" name="address" required>
             </div>
 
             <button type="submit" class="btn btn-warning btn-lg">Signup</button>
