--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -8,7 +8,7 @@
      <div class="container">
        <div class="navbar-header">
          <a class="navbar-brand" href="/main">
-           <img id="logo"alt="Share Goods"  src="../../images/logo.png">
+           <img id="logo"alt="Share Goods"  src="/images/logo.png">
          </a>
          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
            Menu
