--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -17,7 +17,7 @@
        </div>
        <div class="navbar-collapse collapse">
          <ul class="nav navbar-nav navbar-left">
-           <li><a href="/main/<%= username%>">Home</a></li>
+           <li><a href="/<%= username%>/main">Home</a></li>
            <li><a href="/<%= username %>/requests">Requests</a></li>
            <li class="dropdown">
              <a class="dropdown-toggle" role ="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" > Actions <span class="caret"></span></a>
