--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -7,7 +7,7 @@
 <nav id ="navigation" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
      <div class="container">
        <div class="navbar-header">
-         <a class="navbar-brand" href="/main">
+         <a class="navbar-brand" href="/<%= username %>/main">
            <img id="logo"alt="Share Goods"  src="/images/logo.png">
          </a>
          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
