--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -25,7 +25,7 @@
                     <label for="category">Category</label>
                     <input type="text" class="form-control" id="category" placeholder="e.g Household">
                 </div>
-                <div class="form-group">
+                <div class="form-group date">
                     <label for="postedAfter">Posted After</label>
                     <input type="date" id="postedAdter">
                     <p class="help-block"> Items posted after a certain date. </p>
