fixed going back once logged in

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,12 +16,12 @@
 <div class="container">
 
     <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span> Node Authentication</h1>
-
+        <h1>Share Goods</h1>
+        <p><i> Sharing is Caring</i>  &#x2764;</p>
         <p>Login or Register with:</p>
 
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
+        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Login</a>
+        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Signup</a>
     </div>
 
 </div>
