--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -28,11 +28,11 @@
         <form action="/api/auth/login" method="post">
             <div class="form-group">
                 <label>Username</label>
-                <input type="text" class="form-control" name="username" value="eanh" required>
+                <input type="text" class="form-control" name="username" required>
             </div>
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" class="form-control" name="password" value="ian123" required>
+                <input type="password" class="form-control" name="password" required>
             </div>
 
             <button type="submit" class="btn btn-warning btn-lg">Login</button>
