--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,45 +1,48 @@
 <head>
-  <!-- CSS styling for page -->
-  <link rel="stylesheet" href="/css/navigation-bar-style.css">
-  <script src="/scripts/navigation-bar-script.js"> </script>
+    <!-- CSS styling for page -->
+    <link rel="stylesheet" href="/css/navigation-bar-style.css">
+    <script src="/scripts/navigation-bar-script.js"></script>
 
 </head>
-<nav id ="navigation" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-     <div class="container">
-       <div class="navbar-header">
-         <a class="navbar-brand" href="/<%= username %>/main">
-           <img id="logo"alt="Share Goods"  src="/images/logo.png">
-         </a>
-         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-           Menu
-         </button>
-         <a class="navbar-brand" href="index.html"></a>
-       </div>
-       <div class="navbar-collapse collapse">
-         <ul class="nav navbar-nav navbar-left">
-           <li><a href="/<%= username%>/main">Home</a></li>
-           <li><a href="/<%= username %>/requests">Requests</a></li>
-           <li class="dropdown">
-             <a class="dropdown-toggle" role ="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" > Actions <span class="caret"></span></a>
-             <ul class="dropdown-menu">
-               <li><a href="/<%= username %>/listing">Add Listing</a></li>
-               <li><a href="/<%= username %>/search"> Custom Product Search</a></li>
-               <li><a href="/<%= username %>/my-requests"> My Requests </a></li>
-             </ul>
-           </li>
-           <li><a href="/main/<%= username %>" onclick="services()">Services</a></li>
-         </ul>
-         <form id ="submitId" class="navbar-form navbar-left">
-           <div class="form-group">
-             <button id="submitButton"  type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>Search</button>
-           </div>
-         </form>
-         <ul class="nav navbar-nav navbar-right">
-           <li class="dropdown">
-             <li><a href="/<%= username %>/profile">Profile</a></li>
-           </li>
-           <li><a href="/logout"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Sign Out</a></li>
-         </ul>
-       </div>
-     </div>
-   </nav>
+<nav id="navigation" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/<%= username %>/main">
+                <img id="logo" alt="Share Goods" src="/images/logo.png">
+            </a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                Menu
+            </button>
+            <a class="navbar-brand" href="index.html"></a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-left">
+                <li><a href="/<%= username %>/main">Home</a></li>
+                <li><a href="/<%= username %>/requests">Requests</a></li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
+                       aria-expanded="true"> Actions <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/<%= username %>/listing">Add Listing</a></li>
+                        <li><a href="/<%= username %>/search"> Custom Product Search</a></li>
+                        <li><a href="/<%= username %>/my-requests"> My Requests </a></li>
+                    </ul>
+                </li>
+                <li><a href="/main/<%= username %>" onclick="services()">Services</a></li>
+            </ul>
+            <form id="submitId" class="navbar-form navbar-left">
+                <div class="form-group">
+                    <button id="submitButton" type="submit" class="btn btn-default"><span
+                                class="glyphicon glyphicon-search" aria-hidden="true"></span>Search
+                    </button>
+                </div>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                <li><a href="/<%= username %>/profile">Profile</a></li>
+                </li>
+                <li><a href="/logout"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Sign Out</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
