--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -7,7 +7,7 @@
 <nav id="navigation" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/<%= username %>/main">
+            <a class="navbar-brand" href="/<%= username %>/main/">
                 <img id="logo" alt="Share Goods" src="/images/logo.png">
             </a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -17,8 +17,8 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-left">
-                <li><a href="/<%= username %>/main">Home</a></li>
-                <li><a href="/<%= username %>/requests">Requests</a></li>
+                <li><a href="/<%= username %>/main/">Home</a></li>
+                <li><a href="/<%= username %>/requests/">Requests</a></li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
                        aria-expanded="true"> Actions <span class="caret"></span></a>
