--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -28,7 +28,7 @@
                         <li><a href="/<%= username %>/my-requests"> My Requests </a></li>
                     </ul>
                 </li>
-                <li><a href="/main/<%= username %>" onclick="services()">Services</a></li>
+                <li><a onclick="services()">Services</a></li>
             </ul>
             <form id="submitId" class="navbar-form navbar-left">
                 <div class="form-group">
